[gd_scene load_steps=4 format=3 uid="uid://d1amd45oe3vji"]

[ext_resource type="Script" uid="uid://2niyvw1scih0" path="res://Scripts/menu_window.gd" id="1_csbi6"]
[ext_resource type="LabelSettings" uid="uid://cq50hph2wufjt" path="res://Scenes/Font Settings/menu_window.tres" id="2_c3wgg"]
[ext_resource type="Script" uid="uid://i6mkfgbj5r3r" path="res://Scripts/main_menu_button.gd" id="2_qtrpy"]

[node name="MenuWindow" type="Window"]
size = Vector2i(400, 300)
script = ExtResource("1_csbi6")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Gun for All"
label_settings = ExtResource("2_c3wgg")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"
script = ExtResource("2_qtrpy")

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
script = ExtResource("2_qtrpy")

[node name="MarginContainer2" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="VersionLabel" type="Label" parent="Panel/MarginContainer2"]
layout_mode = 2
label_settings = ExtResource("2_c3wgg")
